# PicoWorkSpace

Blink/: CMakeLists.txt  blink.c
FreeRTOS/Hello_World/: CMakeLists.txt
FreeRTOS/Hello_World/src/: CMakeLists.txt  main.c
FreeRTOS/Sempahors/: CMakeLists.txt
FreeRTOS/Sempahors/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
Uart/: .cproject  .project  CMakeLists.txt  gpio_init.c  gpio_init.h  uart.c
